try to detect IDEA exe path at first launch. Add "ok" button to config dialog.

--- a/Xamaridea.Core/Xamaridea.Core.csproj
+++ b/Xamaridea.Core/Xamaridea.Core.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AndroidIdeDetector.cs" />
     <Compile Include="Exceptions\CsprojEditFailedException.cs" />
     <Compile Include="Extensions\FileExtensions.cs" />
     <Compile Include="Exceptions\FileRenameToLowercaseException.cs" />
