Add ability to edit project template

--- a/Xamaridea.Core/Xamaridea.Core.csproj
+++ b/Xamaridea.Core/Xamaridea.Core.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AndroidIdeDetector.cs" />
+    <Compile Include="AndroidProjectTemplateManager.cs" />
     <Compile Include="Exceptions\CsprojEditFailedException.cs" />
     <Compile Include="Extensions\FileExtensions.cs" />
     <Compile Include="Exceptions\FileRenameToLowercaseException.cs" />
