--- a/Xamaridea.VisualStudioPlugin/Xamaridea.VisualStudioPlugin.csproj
+++ b/Xamaridea.VisualStudioPlugin/Xamaridea.VisualStudioPlugin.csproj
@@ -189,6 +189,10 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
+    <Content Include="preview.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <Content Include="Resources\Package.ico" />
   </ItemGroup>
   <ItemGroup>
