--- a/Xamaridea.VisualStudioPlugin/App.config
+++ b/Xamaridea.VisualStudioPlugin/App.config
@@ -10,6 +10,9 @@
             <setting name="AnidePath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="ShowSuggestions" serializeAs="String">
+                <value>True</value>
+            </setting>
         </EgorBo.Xamaridea_VisualStudioPlugin.Settings>
     </userSettings>
 </configuration>
