--- a/Xamaridea.VisualStudioPlugin/Settings.settings
+++ b/Xamaridea.VisualStudioPlugin/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="AnidePath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="ShowSuggestions" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
